grammar.js
        source_file: $ => seq(
            repeat(choice($.directive, $._newline)),
            choice(
                $.diagram_sequence,
                $.diagram_class,
                $.diagram_state,
                $.diagram_gantt,
                $.diagram_pie,
                $.diagram_flow,
                $.diagram_er,
                $.diagram_mindmap,
                $.diagram_gitgraph,
                $.diagram_journey,
        )),

        diagram_er: $ => seq(
            kwd("erdiagram"),
            optional($._newline),
            sep($._er_stmt, $._newline),
            optional($._newline),
        ),

        _er_stmt: $ => choice(
            $.er_stmt_entity,
            $.er_stmt_entity_relation,
            $.er_stmt_entity_block,
        ),

        er_stmt_entity_relation: $ => seq(
            $.er_entity_name,
            $.er_relation,
            $.er_entity_name,
            ":", $.er_role,
        ),
        er_entity_name: $ => $._er_alphanum,
        er_relation: $ => seq(
            $._er_cardinarity,
            $._er_reltype,
            $._er_cardinarity,
        ),
        _er_cardinarity: $ => choice(
            $.er_cardinarity_zero_or_one,
            $.er_cardinarity_zero_or_more,
            $.er_cardinarity_one_or_more,
            $.er_cardinarity_only_one,
        ),
        _er_reltype: $ => choice(
            $.er_reltype_non_identifying,
            $.er_reltype_identifying,
        ),
        er_role: $ => choice( $._er_word, $._er_alphanum,),

        er_stmt_entity_block: $ => seq(
            $.er_entity_name,
            "{",
            $._newline,
            optional($.er_stmt_entity_block_inner),
            "}"
        ),

        er_stmt_entity_block_inner: $ => repeat1($.er_attribute),

        er_attribute: $ => seq(
            $.er_attribute_type,
            $.er_attribute_name,
            optional($._er_attribute_key_type),
            optional($.er_attribute_comment),
            $._newline,
        ),

        er_attribute_type: $ => $._er_alphanum,
        er_attribute_name: $ => $._er_alphanum,

        _er_attribute_key_type: $ => choice(
            $.er_attribute_key_type_pk,
            $.er_attribute_key_type_fk,
        ),

        er_attribute_comment: $ => $._er_word,

        // mindmap diagram (mmap)
